# code-migration-test

./: .gitignore  README.md  analyze_project.py  generate_migration_plan.py  main.py  migration_plan.json  pyproject.toml  translate_code.py  utils.py
api-server/: package.json
api-server/src/: index.js  server.js
api-server/src/controllers/: itemController.js
api-server/src/data/: data.js  items.js
api-server/src/routes/: items.js
api_service/api_service/: main.py
api_service/api_service/api/: delete_handler.py  get_handler.py  post_handler.py  put_handler.py
nodejs-api/src/: server.js
nodejs-api/src/controllers/: itemController.js
nodejs-api/src/data/: data.js
nodejs-api/src/routes/: itemRoutes.js
python_api/python_api/: main.py
python_api/python_api/api/: delete.py  get.py  post.py  put.py
python_api/python_api/data/: storage.py
src/: analyze_project.py  create_output.py  generate_migration_plan.py  translate_code.py  utils.py
temp_extract/Php/: index.php
temp_extract/Php/api/: delete.php  get.php  post.php  put.php
temp_extract/Php/data/: data.php
